fixed gap at 1024px

--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -16,6 +16,12 @@
     display: none;
 }
 
+@media (max-width: 1024px) {
+    .links {
+        gap: 5px;
+    }
+}
+
 @media (max-width: 768px) {
     .links {
         display: none;
